<resources>
    <string name="app_name">My Application</string>
    <string name="photos">Photos</string>
    <string name="_125">125</string>
    <string name="bui_nguyen_ngoc_huy">Bui Nguyen Ngoc Huy</string>
    <string name="followers">Followers</string>
    <string name="_1205">1205</string>
    <string name="following">Following</string>
    <string name="_360">360</string>
    <string name="show_all_comments">Show all comments</string>
    <string name="follow_me">Follow Me</string>
    <string name="todo">TODO</string>
    <string name="ngochuy_gmail_com">NgocHuy@gmail.com</string>
    <string name="_0385976476">0385976476</string>
    <string name="add_to_group">Add to group</string>
    <string name="to">TODO</string>
    <string name="phone">TODO</string>
    <string name="cmt">TODO</string>
    <string name="email">TODO</string>
</resources>